services/user-service/user-service.log

> @hockey-hub/user-service@1.0.0 dev
> nodemon --exec ts-node src/index.ts

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): src/**/*[39m
[33m[nodemon] watching extensions: ts[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
/mnt/c/Hockey Hub/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1._9eead51b23d149e3f5f7ff98f4cf2bb2/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/models/User.ts(2,66): error TS2307: Cannot find module 'class-validator' or its corresponding type declarations.

    at createTSError (/mnt/c/Hockey Hub/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1._9eead51b23d149e3f5f7ff98f4cf2bb2/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/mnt/c/Hockey Hub/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1._9eead51b23d149e3f5f7ff98f4cf2bb2/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/mnt/c/Hockey Hub/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1._9eead51b23d149e3f5f7ff98f4cf2bb2/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/mnt/c/Hockey Hub/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1._9eead51b23d149e3f5f7ff98f4cf2bb2/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/mnt/c/Hockey Hub/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1._9eead51b23d149e3f5f7ff98f4cf2bb2/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (/mnt/c/Hockey Hub/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1._9eead51b23d149e3f5f7ff98f4cf2bb2/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2307 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
